# TaskManagerBackend

./: Cargo.toml  README.md  reame.md
API/: logs.md  test.http
migrations/: 20260216174224_users.sql  20260217062759_task.sql
src/: db.rs  dto.rs  errors.rs  handlers.rs  main.rs  models.rs  repository.rs  routers.rs  services.rs  utils.rs
src/config/: env.rs
src/db/: connection.rs
src/dto/: auth_dto.rs  task_dto.rs
src/errors/: custom_errors.rs
src/handlers/: auth_handler.rs  task_handler.rs
src/models/: task.rs  user.rs
src/repository/: task.rs  user_repo.rs
src/routers/: auth_router.rs  task_router.rs
src/services/: auth_service.rs  task_service.rs
src/utils/: jwt.rs  password.rs  scheduler.rs
